esteira/kube/hmlg/services/full_deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: infopel-hmlg
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infopel-front-hmlg
  namespace: infopel-hmlg
spec:
  selector:
    matchLabels:
      app: infopel-front-hmlg
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  revisionHistoryLimit: 20
  template:
    metadata:
      labels:
        app: infopel-front-hmlg
    spec:
      containers:
        - name: infopel-front-hmlg
          image: 415098517687.dkr.ecr.sa-east-1.amazonaws.com/infopel-front-hmlg:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3337
          resources:
            requests:
              memory: "64Mi"
              cpu: "0.05"
            limits:
              memory: "128Mi"
              cpu: "0.1"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: infopel-front-hmlg
  namespace: infopel-hmlg
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
        more_set_headers "Access-Control-Allow-Origin: $http_origin";
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: PUT, GET, POST,
        OPTIONS, DELETE, PATCH
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,X-CustomHeader,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Authorization,apikey"
spec:
  tls:
    - hosts:
        - "infopel-front-hmlg.registrocivil.org.br"
      secretName: cert-k8s-arpensp
  rules:
    - host: "infopel-front-hmlg.registrocivil.org.br"
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: infopel-front-hmlg
                port:
                  number: 3337
---
apiVersion: v1
kind: Service
metadata:
  name: infopel-front-hmlg
  namespace: infopel-hmlg
spec:
  selector:
    app: infopel-front-hmlg
  ports:
    - name: https
      port: 443
      protocol: TCP
      targetPort: 3337
  type: ClusterIP
